Fixed spacing between goals

--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@
     padding: 0.4rem 0.8rem;
     width: 90%;
     word-wrap: break-word;
+    gap: 5px;
   }
   .task-container{
     gap: 0.8rem;
